syntax = "proto3";

package inventory;

service InventoryService {
  rpc CheckAvailability (InventoryRequest) returns (InventoryResponse);
}

message InventoryRequest {
  string productId = 1;
  int32  quantity  = 2;
}

message InventoryResponse {
  bool available = 1;
}
